<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:mContext="br.com.android.app.liuvasconcelos.costumerloyalty.registrationPage.RegistrationPageFragment">

    <data>
        <variable
            name="handler"
            type="liuvasconcelos.costumerloyalty.registrationPage.RegistrationPageFragment"/>
    </data>

    <LinearLayout
        android:id="@+id/registration_page_linear_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/introduction_page_color_background">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="40dp"
            android:text="@string/register_text"
            android:textAlignment="textStart"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:fontFamily="monospace"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="20dp"
            android:text="@string/name"
            android:textAlignment="textStart"
            android:textColor="@color/white"
            android:textSize="15sp"
            android:fontFamily="monospace"/>

        <EditText
            android:id="@+id/name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:hint="@string/name_request"
            android:textColor="@color/white"
            android:textSize="12dp"
            android:textColorHint="@color/white"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:text="CPF"
            android:textAlignment="textStart"
            android:textColor="@color/white"
            android:textSize="15sp"
            android:fontFamily="monospace"/>

        <EditText
            android:id="@+id/cpf"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:hint="@string/cpf_request"
            android:textColor="@color/white"
            android:textSize="12dp"
            android:textColorHint="@color/white"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"

            android:text="@string/phone"
            android:textAlignment="textStart"
            android:textColor="@color/white"
            android:textSize="15sp"
            android:fontFamily="monospace"/>

        <EditText
            android:id="@+id/phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:hint="@string/phone_request"
            android:textColor="@color/white"
            android:textSize="12dp"
            android:textColorHint="@color/white"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:text="E-mail"
            android:textAlignment="textStart"
            android:textColor="@color/white"
            android:textSize="15sp"
            android:fontFamily="monospace"/>

        <EditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:hint="@string/login_request"
            android:textColor="@color/white"
            android:textSize="12dp"
            android:textColorHint="@color/white"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:text="@string/password"
            android:textAlignment="textStart"
            android:textColor="@color/white"
            android:textSize="15sp"
            android:fontFamily="monospace"/>

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:hint="@string/password_request"
            android:inputType="textPassword"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textSize="12dp" />

        <FrameLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginRight="20dp"
            android:layout_marginTop="10dp"
            android:clickable="true"
            android:onClick="@{handler::registerUser}">

            <TextView
                android:id="@+id/login_page_go_to_next_page"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_gravity="end"
                android:visibility="visible"
                android:background="@drawable/rounded_white" />
            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/right_arrow"
                android:layout_gravity="center"
                />
        </FrameLayout>



    </LinearLayout>

</layout>