<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:mContext="br.com.android.app.liuvasconcelos.costumerloyalty.mainPage.MainPageFragment">

    <data>
        <variable
            name="handler"
            type="liuvasconcelos.costumerloyalty.mainPage.MainPageFragment"/>

    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/introduction_page_color_background">

        <LinearLayout
            android:id="@+id/main_page_no_access_to_go_linear_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:background="@color/introduction_page_color_background">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="100dp"
                    android:layout_weight="1"
                    android:text="@string/main_page_win_dinner_1"
                    android:textColor="@color/white"
                    android:textSize="25sp"
                    android:textAlignment="textEnd"
                    android:fontFamily="monospace"/>

                <TextView
                    android:id="@+id/username"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="100dp"
                    android:layout_marginLeft="5dp"
                    android:layout_weight="1"
                    android:textColor="@color/white"
                    android:textSize="25sp"
                    android:textAlignment="textStart"
                    android:text="Usuário"
                    android:fontFamily="monospace"/>
            </LinearLayout>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:layout_marginTop="20dp"
                android:text="@string/main_page_win_dinner_2"
                android:textColor="@color/white"
                android:gravity="center"
                android:textSize="40sp"
                android:textStyle="bold"
                android:fontFamily="monospace"/>

            <FrameLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginRight="30dp"
                android:layout_marginTop="20dp">

                <TextView
                    android:id="@+id/main_page_get_code"
                    android:layout_width="130dp"
                    android:layout_height="30dp"
                    android:layout_gravity="end"
                    android:background="@drawable/rounded_white" />
                <TextView
                    android:id="@+id/main_page_get_code_text"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="3dp"
                    android:layout_marginLeft="15dp"
                    android:layout_gravity="left"
                    android:text="@string/get_code"/>
                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:src="@drawable/right_arrow"
                    android:layout_gravity="right"
                    />
            </FrameLayout>

        </LinearLayout>


    </LinearLayout>


</layout>