<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:mContext="br.com.android.app.liuvasconcelos.costumerloyalty.introductionPage.IntroPageFragment">

    <data>
        <variable
            name="handler"
            type="liuvasconcelos.costumerloyalty.introductionPage.IntroPageFragment"/>
    </data>

    <LinearLayout
        android:id="@+id/introduction_page_linear_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/introduction_page_color_background">

        <TextView
            android:id="@+id/introduction_page_logo_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/logo_text"
            android:textColor="@color/white"
            android:textSize="40sp"
            android:textAlignment="center"
            android:gravity="center"
            android:fontFamily="monospace"
            android:layout_margin="70dp"/>

        <LinearLayout
            android:id="@+id/introduction_page_squads_linear_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/introduction_page_first_line_of_squads"
                android:layout_width="match_parent"
                android:layout_height="120dp"
                android:orientation="horizontal"
                android:clickable="true"
                android:onClick="@{handler::goToLoginPage}">

                <LinearLayout
                    android:id="@+id/introduction_page_login_option"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/introduction_page_color_1"
                    android:layout_weight="1">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:textAlignment="center"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="Login"
                        android:fontFamily="monospace"
                        android:textColor="@color/white"
                        android:textSize="20sp"/>

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/introduction_page_register_option"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/introduction_page_color_2"
                    android:layout_weight="1"
                    android:clickable="true"
                    android:onClick="@{handler::goToRegistrationPage}">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:textAlignment="center"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="@string/register_text"
                        android:fontFamily="monospace"
                        android:textColor="@color/white"
                        android:textSize="20sp"/>

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/introduction_page_mapping"
                android:layout_width="match_parent"
                android:layout_height="120dp"
                android:orientation="horizontal"
                android:background="@color/introduction_page_color_3">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:textAlignment="center"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/find_us_text"
                    android:fontFamily="monospace"
                    android:textColor="@color/white"
                    android:textSize="20sp"/>

            </LinearLayout>
        </LinearLayout>

    </LinearLayout>


</layout>